Fix: solved problem on text wrap

--- a/src/assets/css/components/homePage.css
+++ b/src/assets/css/components/homePage.css
@@ -251,6 +251,7 @@
 }
 
 span.seperator {
+	white-space: nowrap;
 	font-size: 12px;
 	animation: changeColor 10s ease-in-out infinite;
 }
